# lob-engine

./: .gitignore  BENCHMARKS.md  CMakeLists.txt
bench/: bench_book.cpp
include/lob/: order_book.hpp  pool.hpp  risk.hpp  types.hpp
scenarios/: validate_scenarios.cpp
src/: main.cpp  order_book.cpp
tests/: test_matching.cpp
